# AlexandrIA

./: .gitignore  README.md  docker-compose.yml  pre-setup.sh  setup-gcp.sh
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  graph.py  state.py
backend/app/agent/nodes/: __init__.py  classify_fields.py  parse_requirements.py  structure_form.py  validate_form.py
backend/app/agent/prompts/: templates.py
backend/app/api/: deps.py
backend/app/api/routes/: agent.py  auth.py  dashboard.py  forms.py  setup.py  submissions.py
backend/app/db/: session.py
backend/app/models/: __init__.py  form.py  schemas.py
backend/app/services/: sheets_sync.py  storage.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FormListPage.tsx  LoginPage.tsx
frontend/src/components/Dashboard/: DashboardPage.tsx  FilterBar.tsx  MapView.tsx  StatsCards.tsx
frontend/src/components/FormBuilder/: AgentInput.tsx  Canvas.tsx  (+3 more)
frontend/src/services/: api.ts  offline.ts
frontend/src/store/: index.ts
frontend/src/types/: form.ts
terraform/: artifact_registry.tf  cloud_run.tf  cloud_sql.tf  cloud_storage.tf  iam.tf  main.tf  outputs.tf  secret_manager.tf  terraform.tfvars.example  variables.tf
workflows/: deploy-backend.yml  deploy-frontend.yml
(+10 files in other folders)
